tests/baselines/reference/interfaceThatIndirectlyInheritsFromItself.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(1,11): error TS2310: Type 'Base' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(5,11): error TS2310: Type 'Derived' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(9,11): error TS2310: Type 'Derived2' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(14,15): error TS2310: Type 'Base<T>' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(18,15): error TS2310: Type 'Derived<T>' recursively references itself as a base type.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts(22,15): error TS2310: Type 'Derived2<T>' recursively references itself as a base type.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatIndirectlyInheritsFromItself.ts (6 errors) ====
    interface Base extends Derived2 { // error
              ~~~~
!!! error TS2310: Type 'Base' recursively references itself as a base type.
        x: string;
    }
    
    interface Derived extends Base {
              ~~~~~~~
!!! error TS2310: Type 'Derived' recursively references itself as a base type.
        y: string;
    }
    
    interface Derived2 extends Derived {
              ~~~~~~~~
!!! error TS2310: Type 'Derived2' recursively references itself as a base type.
        z: string;
    }
    
    module Generic {
        interface Base<T> extends Derived2<T> { // error
                  ~~~~
!!! error TS2310: Type 'Base<T>' recursively references itself as a base type.
            x: string;
        }
    
        interface Derived<T> extends Base<T> {
                  ~~~~~~~
!!! error TS2310: Type 'Derived<T>' recursively references itself as a base type.
            y: string;
        }
    
        interface Derived2<T> extends Derived<T> {
                  ~~~~~~~~
!!! error TS2310: Type 'Derived2<T>' recursively references itself as a base type.
            z: string;
        }
    }